2008-08-28  Bart Veer  <bartv@ecoscentric.com>

	* host/configure: regenerate after update of Tcl macro

2008-08-20  Bart Veer  <bartv@ecoscentric.com>

	* host/configure: regenerate after update of Tcl macro

2008-08-18  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.am, host/configure.in, ecosynth.c: update
	host-side configury.
	* host/Makefile.in, host/aclocal.m4, host/configure: regenerate

2008-08-13  Bart Veer  <bartv@ecoscentric.com>

	* host/ecosynth.tcl: avoid X problems when shutting down.
	* src/synth.ld: update for recent gcc versions.
	* cdl/hal_synth.cdl: use the right compiler flags to avoid a build
	warning. 

2007-06-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth_entry.c (__stack_chk_fail): another new function
	needed when building with gcc 4.1.2
	* current/src/synth.ld: place eh_frame_hdr into eh_frame.

2006-07-10  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_entry.c (__stack_chk_fail_local): new function needed
	when building with gcc 4.1.1

2005-11-19  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_entry.c (_linux_entry): brk() is no longer needed to
	get heap memory.

	* src/synth.ld: add new section to contain the heap memory rather
	than rely on brk().
	

2005-11-05  Andrew Lunn <andrew.lunn@ascom.ch>

	* include/hal_io.h (struct cyg_hal_sys_old_stat): Make the
	structure match the kernel version otherwise the stack gets
	corrupt and we die 'orribly. Added cyg_hal_sys_new_stat for when
	using the new?stat() calls.
	* src/synth_syscall.c (cyg_hal_sys_ftok): use the correct structure 
        member names and use the newstat system call so we get 
	values back which are compatible with glibc ftok() function.
	* tests/ftok.c (new): Test case for the cyg_hal_sys_ftok() 
        function added in the previous patch.

2005-10-19  Alexander Neundorf <neundorf@kde.org>

	* src/synth_syscall.c: add cyg_hal_sys_ftok().

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>
